[tool.poetry]
name = "fmj"
version = "0.0.1"
description = "Exhaustive methodology \u0026 code for regulatory \u0026 accounting models"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "fmj"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"